--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,12 @@
 
     }
 
+    button {
+      color:blue;
+      font-family: Times;
+      border-radius:20px;
+    }
+
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
