--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,12 @@
       border-radius:20px;
     }
 
+    #btnA {
+      background-color:yellow;
+      color:green;
+    }
+    
+
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
