remainのフォントを太字に変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,7 +15,10 @@
       background-color:yellow;
       color:green;
     }
-    
+
+    #remain {
+      font-weight:bold;
+    }
 
     #minuteStr {
         color: #ff0000;
