--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,6 +20,10 @@
       font-weight:bold;
     }
 
+    #time {
+      box-shadow:5px 5px 5px;
+    }
+
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
