経過時間の表示の後ろにsを追加

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,6 +25,9 @@
       width:50%;
       margin:0 auto;
     }
+    #time::after{
+      content:"s";
+    }
 
     #minuteStr {
         color: #ff0000;
