start,stopボタンの背景色をホワイトスモーク、文字色をグリーンに変更setボタンの背景色を黄色、文字色を赤に変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,9 +12,21 @@
     }
 
     #btnA {
-      background-color:yellow;
+      background-color:whitesmoke;
       color:green;
     }
+
+     #btnB {
+      background-color:whitesmoke;
+      color:green;
+    }
+     #btnC {
+      background-color:yellow;
+      color:red;
+    }
+
+
+
 
     #remain {
       font-weight:bold;
